# dreamcanvas

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  __init__.py  package.json  pnpm-lock.yaml  requirements.txt
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
.github/workflows/: ci.yml
apps/desktop/: .gitignore  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/desktop/playwright/: project-flow.spec.ts
apps/desktop/playwright/report/: index.html  results.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/launcher/: index.html
apps/desktop/src-tauri/src/: backend.rs  main.rs  project.rs  settings.rs
apps/desktop/src/app/: globals.css  home.test.tsx  layout.tsx  page.tsx
apps/desktop/src/modules/: README.md
apps/desktop/src/modules/project/: api.ts  hooks.ts  state.test.ts  state.ts  types.ts
config/: README.md  default.env  secrets.enc.example  secrets.template.json
docs/: DreamCanvas - 详细开发文档.md  changelog.md  jimeng_reverse_engineering_report.md  product_requirements.md  rollback.md  runbook.md
scripts/: collect-logs.ps1  redact.ps1  restore-backup.ps1  run-e2e.ps1  run-perf.ps1  self-test.ps1  setup.ps1  start-backend.ps1
src-py/: README.md  main.py  pyproject.toml
src-py/dreamcanvas/: __init__.py  app.py
src-py/dreamcanvas/api/: __init__.py  jimeng.py  routes.py  system.py  tools.py
src-py/dreamcanvas/cli/: __init__.py
src-py/dreamcanvas/config/: settings.py
src-py/dreamcanvas/models/: __init__.py  project.py  tasks.py
src-py/dreamcanvas/security/: __init__.py  secret_store.py
src-py/dreamcanvas/services/: __init__.py  jimeng.py  jimeng_client.py  projects.py  secret_manager.py
src-py/tests/: conftest.py  test_cli_secrets.py  test_health.py  test_jimeng_api.py  test_secret_store.py  test_system_api.py  test_tools_api.py
tests/perf/: jimeng-smoke.js
(+10 files in other folders)
