[package]
name = "dreamcanvas"
version = "0.1.0"
description = "DreamCanvas 桌面端"
authors = ["DreamCanvas Team"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
open = "5.1"
hex = "0.4"
sha2 = "0.10"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
